// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
{
  "error": ""email" must be a valid email",
}
`;

exports[` 2`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tokyo",
  "country": "JP",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9379911",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "HEALTH",
  ],
  "status": "ACTIVE",
  "type": "COOP",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 3`] = `
{
  "address": "address",
  "bio": "test",
  "city": "Tehran",
  "country": "IR",
  "cover_image": null,
  "created_at": Any<String>,
  "created_by": Any<String>,
  "culture": "test",
  "description": "test",
  "did": null,
  "email": "test@socious.io",
  "followers": 0,
  "followings": 0,
  "geoname_id": null,
  "hiring": false,
  "id": Any<String>,
  "image": null,
  "impact_points": 0,
  "industry": null,
  "mission": "test",
  "mobile_country_code": null,
  "name": "test ORG",
  "other_party_id": null,
  "other_party_title": null,
  "other_party_url": null,
  "phone": "9899993",
  "search_tsv": Any<String>,
  "shortname": Any<String>,
  "size": null,
  "social_causes": [
    "SOCIAL",
    "MENTAL",
  ],
  "status": "ACTIVE",
  "type": "SOCIAL",
  "updated_at": Any<String>,
  "verified": false,
  "verified_impact": false,
  "wallet_address": null,
  "website": "http://test.com",
}
`;

exports[` 4`] = `
{
  "error": ""phone" must be a string",
}
`;

exports[`get all disputes as climant 1`] = `
{
  "items": [
    {
      "claimant": {
        "created_at": "2024-05-20T20:42:37.644377+00:00",
        "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
        "meta": {
          "address": null,
          "avatar": null,
          "city": null,
          "country": null,
          "email": "test@test.io",
          "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
          "identity_verified": false,
          "name": "testname lastname",
          "open_to_volunteer": false,
          "open_to_work": false,
          "status": "ACTIVE",
          "username": "test_username",
          "wallet_address": null,
        },
        "type": "users",
      },
      "created_at": "2024-05-20T20:42:38.242Z",
      "direction": "received",
      "events": [
        {
          "evidences": [
            {
              "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
              "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
            },
            {
              "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
            },
            {
              "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
            },
          ],
          "id": "69b7b5fc-da84-47d0-99fb-d8115fbab0fe",
          "message": "same as initial message",
          "type": "MESSAGE",
          "vote_side": null,
        },
        {
          "evidences": [
            {
              "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
              "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
            },
            {
              "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
            },
            {
              "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
            },
          ],
          "id": "7cf3a1ed-0368-4490-baa6-b3752a0e6fd5",
          "message": "Message #1",
          "type": "MESSAGE",
          "vote_side": null,
        },
        {
          "evidences": [
            {
              "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
              "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
            },
            {
              "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
            },
            {
              "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
              "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
            },
          ],
          "id": "e386cfef-26aa-47e7-ba12-80962f5eb31e",
          "message": "Response #1",
          "type": "RESPONSE",
          "vote_side": null,
        },
      ],
      "id": "a0df4512-4e14-490e-aba2-54b95966fe0d",
      "respondent": {
        "created_at": "2024-05-20T20:42:38.105359+00:00",
        "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
        "meta": {
          "address": "address",
          "city": "Tokyo",
          "country": "JP",
          "description": "test",
          "email": "test@socious.io",
          "hiring": false,
          "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
          "image": null,
          "mission": "test",
          "name": "test ORG",
          "shortname": "-test8757",
          "status": "ACTIVE",
          "verified": false,
          "verified_impact": false,
          "wallet_address": null,
        },
        "type": "organizations",
      },
      "state": "PENDING_REVIEW",
      "title": "dispute #1",
      "updated_at": "2024-05-20T20:42:38.242Z",
    },
  ],
  "limit": 10,
  "page": 1,
  "total_count": 1,
}
`;

exports[`issue a dispute 1`] = `
{
  "claimant": {
    "created_at": "2024-05-20T20:42:37.644377+00:00",
    "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
    "meta": {
      "address": null,
      "avatar": null,
      "city": null,
      "country": null,
      "email": "test@test.io",
      "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
      "identity_verified": false,
      "name": "testname lastname",
      "open_to_volunteer": false,
      "open_to_work": false,
      "status": "ACTIVE",
      "username": "test_username",
      "wallet_address": null,
    },
    "type": "users",
  },
  "created_at": "2024-05-20T20:42:38.242Z",
  "direction": "received",
  "events": [
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "69b7b5fc-da84-47d0-99fb-d8115fbab0fe",
      "message": "same as initial message",
      "type": "MESSAGE",
      "vote_side": null,
    },
  ],
  "id": "a0df4512-4e14-490e-aba2-54b95966fe0d",
  "respondent": {
    "created_at": "2024-05-20T20:42:38.105359+00:00",
    "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
    "meta": {
      "address": "address",
      "city": "Tokyo",
      "country": "JP",
      "description": "test",
      "email": "test@socious.io",
      "hiring": false,
      "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
      "image": null,
      "mission": "test",
      "name": "test ORG",
      "shortname": "-test8757",
      "status": "ACTIVE",
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
    },
    "type": "organizations",
  },
  "state": "AWAITING_RESPONSE",
  "title": "dispute #1",
  "updated_at": "2024-05-20T20:42:38.242Z",
}
`;

exports[`put message on a dispute 1`] = `
{
  "claimant": {
    "created_at": "2024-05-20T20:42:37.644377+00:00",
    "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
    "meta": {
      "address": null,
      "avatar": null,
      "city": null,
      "country": null,
      "email": "test@test.io",
      "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
      "identity_verified": false,
      "name": "testname lastname",
      "open_to_volunteer": false,
      "open_to_work": false,
      "status": "ACTIVE",
      "username": "test_username",
      "wallet_address": null,
    },
    "type": "users",
  },
  "created_at": "2024-05-20T20:42:38.242Z",
  "direction": "received",
  "events": [
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "69b7b5fc-da84-47d0-99fb-d8115fbab0fe",
      "message": "same as initial message",
      "type": "MESSAGE",
      "vote_side": null,
    },
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "7cf3a1ed-0368-4490-baa6-b3752a0e6fd5",
      "message": "Message #1",
      "type": "MESSAGE",
      "vote_side": null,
    },
  ],
  "id": "a0df4512-4e14-490e-aba2-54b95966fe0d",
  "respondent": {
    "created_at": "2024-05-20T20:42:38.105359+00:00",
    "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
    "meta": {
      "address": "address",
      "city": "Tokyo",
      "country": "JP",
      "description": "test",
      "email": "test@socious.io",
      "hiring": false,
      "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
      "image": null,
      "mission": "test",
      "name": "test ORG",
      "shortname": "-test8757",
      "status": "ACTIVE",
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
    },
    "type": "organizations",
  },
  "state": "AWAITING_RESPONSE",
  "title": "dispute #1",
  "updated_at": "2024-05-20T20:42:38.242Z",
}
`;

exports[`put response on a dispute 1`] = `
{
  "claimant": {
    "created_at": "2024-05-20T20:42:37.644377+00:00",
    "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
    "meta": {
      "address": null,
      "avatar": null,
      "city": null,
      "country": null,
      "email": "test@test.io",
      "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
      "identity_verified": false,
      "name": "testname lastname",
      "open_to_volunteer": false,
      "open_to_work": false,
      "status": "ACTIVE",
      "username": "test_username",
      "wallet_address": null,
    },
    "type": "users",
  },
  "created_at": "2024-05-20T20:42:38.242Z",
  "direction": "received",
  "events": [
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "69b7b5fc-da84-47d0-99fb-d8115fbab0fe",
      "message": "same as initial message",
      "type": "MESSAGE",
      "vote_side": null,
    },
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "7cf3a1ed-0368-4490-baa6-b3752a0e6fd5",
      "message": "Message #1",
      "type": "MESSAGE",
      "vote_side": null,
    },
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "e386cfef-26aa-47e7-ba12-80962f5eb31e",
      "message": "Response #1",
      "type": "RESPONSE",
      "vote_side": null,
    },
  ],
  "id": "a0df4512-4e14-490e-aba2-54b95966fe0d",
  "respondent": {
    "created_at": "2024-05-20T20:42:38.105359+00:00",
    "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
    "meta": {
      "address": "address",
      "city": "Tokyo",
      "country": "JP",
      "description": "test",
      "email": "test@socious.io",
      "hiring": false,
      "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
      "image": null,
      "mission": "test",
      "name": "test ORG",
      "shortname": "-test8757",
      "status": "ACTIVE",
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
    },
    "type": "organizations",
  },
  "state": "PENDING_REVIEW",
  "title": "dispute #1",
  "updated_at": "2024-05-20T20:42:38.242Z",
}
`;

exports[`withdraw from a dispute 1`] = `
{
  "claimant": {
    "created_at": "2024-05-20T20:42:37.644377+00:00",
    "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
    "meta": {
      "address": null,
      "avatar": null,
      "city": null,
      "country": null,
      "email": "test@test.io",
      "id": "937feb99-6664-4a70-9cea-2fa77636a25a",
      "identity_verified": false,
      "name": "testname lastname",
      "open_to_volunteer": false,
      "open_to_work": false,
      "status": "ACTIVE",
      "username": "test_username",
      "wallet_address": null,
    },
    "type": "users",
  },
  "created_at": "2024-05-20T20:42:38.242Z",
  "direction": "received",
  "events": [
    {
      "evidences": [
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
      ],
      "id": "69b7b5fc-da84-47d0-99fb-d8115fbab0fe",
      "message": "same as initial message",
      "type": "MESSAGE",
      "vote_side": null,
    },
    {
      "evidences": [
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
      ],
      "id": "7cf3a1ed-0368-4490-baa6-b3752a0e6fd5",
      "message": "Message #1",
      "type": "MESSAGE",
      "vote_side": null,
    },
    {
      "evidences": [
        {
          "id": "9b3c0329-4131-46c2-8f31-4a72ec494a43",
          "url": "https://soscious.s3-ap-northeast-1.amazonaws.com/public/1654337172/7DA224EA-2C02-4DCC-B413-0515841F2FD3_k4Ix0zf2.png",
        },
        {
          "id": "ceddb810-2f1b-4080-8155-a950dd6cae9b",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/205cOrI1SsaqFv884nLd",
        },
        {
          "id": "ad46f0d8-d9b6-4c17-8548-39224c85acf1",
          "url": "https://process.filestackapi.com/resize=width:600,height:315,fit:max/quality=value:90/hcVESJB2QIy0H8ozSDJ9",
        },
      ],
      "id": "e386cfef-26aa-47e7-ba12-80962f5eb31e",
      "message": "Response #1",
      "type": "RESPONSE",
      "vote_side": null,
    },
    {
      "evidences": [],
      "id": "1892eae8-e748-4567-b3ef-c65e6312ad8c",
      "message": null,
      "type": "WITHDRAW",
      "vote_side": null,
    },
  ],
  "id": "a0df4512-4e14-490e-aba2-54b95966fe0d",
  "respondent": {
    "created_at": "2024-05-20T20:42:38.105359+00:00",
    "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
    "meta": {
      "address": "address",
      "city": "Tokyo",
      "country": "JP",
      "description": "test",
      "email": "test@socious.io",
      "hiring": false,
      "id": "fec933ae-e0a5-46c7-8818-03fb31b01e71",
      "image": null,
      "mission": "test",
      "name": "test ORG",
      "shortname": "-test8757",
      "status": "ACTIVE",
      "verified": false,
      "verified_impact": false,
      "wallet_address": null,
    },
    "type": "organizations",
  },
  "state": "WITHDRAWN",
  "title": "dispute #1",
  "updated_at": "2024-05-20T20:42:38.242Z",
}
`;
